RESOLVED FIXED194974
Crash in SWServerJobQueue::runNextJobSynchronously
https://bugs.webkit.org/show_bug.cgi?id=194974
Summary Crash in SWServerJobQueue::runNextJobSynchronously
Ryosuke Niwa
Reported 2019-02-22 20:05:46 PST
e.g. Thread 0 Crashed: 0 WebCore 0x000000021407d0e0 WTFCrashWithInfo(int, char const*, char const*, int) + 20 1 WebCore 0x00000002157c3d6c WebCore::SWServerJobQueue::runNextJobSynchronously() + 88 (Assertions.h:578) 2 WebCore 0x00000002152968ac WebCore::ThreadTimers::sharedTimerFiredInternal() + 216 (ThreadTimers.cpp:129) 3 WebCore 0x00000002152b6904 WebCore::timerFired(__CFRunLoopTimer*, void*) + 28 (MainThreadSharedTimerCF.cpp:74) 4 CoreFoundation 0x000000020af11780 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 28 (CFRunLoop.c:1830) 5 CoreFoundation 0x000000020af114b0 __CFRunLoopDoTimer + 864 (CFRunLoop.c:2417) 6 CoreFoundation 0x000000020af10ce4 __CFRunLoopDoTimers + 248 (CFRunLoop.c:2564) 7 CoreFoundation 0x000000020af0bc30 __CFRunLoopRun + 1860 (CFRunLoop.c:0) 8 CoreFoundation 0x000000020af0b1cc CFRunLoopRunSpecific + 436 (CFRunLoop.c:3247) 9 Foundation 0x000000020b8d9fec -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 300 (NSRunLoop.m:367) 10 Foundation 0x000000020b9154dc -[NSRunLoop(NSRunLoop) run] + 88 (NSRunLoop.m:389) 11 libxpc.dylib 0x000000020abdfae4 _xpc_objc_main + 516 (main.m:173) 12 libxpc.dylib 0x000000020abe2460 xpc_main + 176 (init.c:1471) 13 com.apple.WebKit.Networking 0x0000000100cdf60c WebKit::XPCServiceMain(int, char const**) + 380 (XPCServiceMain.mm:157) 14 com.apple.WebKit.Networking 0x0000000100cdf7b8 main + 12 (XPCServiceMain.mm:165) 15 libdyld.dylib 0x000000020a9d4b70 start + 4 <rdar://problem/48238666>
Attachments
Fix attempt (1.82 KB, patch)
2019-02-22 20:09 PST, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2019-02-22 20:09:10 PST
Created attachment 362814 [details] Fix attempt
Geoffrey Garen
Comment 2 2019-02-22 20:51:18 PST
Comment on attachment 362814 [details] Fix attempt r=me
WebKit Commit Bot
Comment 3 2019-02-22 21:05:10 PST
Comment on attachment 362814 [details] Fix attempt Clearing flags on attachment: 362814 Committed r241986: <https://trac.webkit.org/changeset/241986>
WebKit Commit Bot
Comment 4 2019-02-22 21:05:11 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-02-22 21:10:22 PST
David Kilzer (:ddkilzer)
Comment 6 2019-02-23 12:28:37 PST
Note You need to log in before you can comment on or make changes to this bug.